<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeUserActivity">

    <ImageView
        android:id="@+id/imgViewBackgroundColorMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background_intro" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:gravity="center|center_horizontal|center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtViewTitleMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="@string/app_name"
                android:textColor="#3d33a8"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edittext"
                android:ems="10"
                android:gravity="center|center_horizontal|center_vertical"
                android:hint="@string/username"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toTopOf="@+id/editTextPass"
                app:layout_constraintStart_toStartOf="@+id/txtViewTitleMain"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edittext"
                android:ems="10"
                android:gravity="center|center_horizontal|center_vertical"
                android:hint="@string/pass"
                android:inputType="textPassword"
                app:layout_constraintStart_toStartOf="@+id/editTextUsuario"
                app:layout_constraintTop_toBottomOf="@+id/editTextUsuario" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="19dp"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/errLogin"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/loginErr"
                android:textColor="#FF3333"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="217dp"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal|center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnLogearse"
                android:layout_width="207dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#3d33a8"
                android:text="@string/btnLogearse" />
        </LinearLayout>

        <ImageView
            android:id="@+id/logoLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/logo" />
    </LinearLayout>

</RelativeLayout>