<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background_color"
    tools:context=".view.InicioActivity">

    <ScrollView
        android:id="@+id/inicio_main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <TextView
                        android:id="@+id/saludoUsuario"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:text="@string/saludouser"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:textColor="#FF6E40" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/buscarypedir"
                        android:textColor="@color/app_text_color"
                        android:textSize="20sp" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/banner" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/barraBusqueda"
                            android:layout_width="297dp"
                            android:layout_height="50dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginBottom="20dp"
                            android:background="@drawable/barra_busqueda_background"
                            android:drawablePadding="5dp"
                            android:ems="10"
                            android:hint="@string/buscarcomida"
                            android:inputType="textPersonName"
                            android:maxLength="40"
                            android:paddingStart="20dp"
                            android:textColor="@color/app_text_color"
                            android:textStyle="italic" />

                        <ImageButton
                            android:id="@+id/botonBusqueda"
                            android:layout_width="36dp"
                            android:layout_height="49dp"
                            android:layout_weight="1"
                            android:background="@drawable/grey_btn_background_rounded"
                            android:elevation="3dp"
                            app:srcCompat="@mipmap/search" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/categorias"
                        android:textColor="@color/app_text_color"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:id="@+id/layoutHorizontalCategorias"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="horizontal" />
                    </HorizontalScrollView>

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/recomendaciones"
                        android:textColor="@color/app_text_color"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:id="@+id/layoutHorizontalRecomendaciones"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="horizontal" />
                    </HorizontalScrollView>

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:backgroundTint="@color/app_bar_background"
        app:fabCradleMargin="8dp"
        app:fabCradleRoundedCornerRadius="50dp"
        app:fabCradleVerticalOffset="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="BottomAppBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/inicio"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/bottom_btn1" />

                <TextView
                    android:id="@+id/textoInicio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/inicio"
                    android:textAlignment="center"
                    android:textColor="@color/app_bar_text" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/perfil"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/bottom_btn2" />

                <TextView
                    android:id="@+id/textoPerfil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/perfil"
                    android:textAlignment="center"
                    android:textColor="@color/app_bar_text" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/carrito"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/bottom_btn5" />

                <TextView
                    android:id="@+id/textoCarrito"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/carrito"
                    android:textAlignment="center"
                    android:textColor="@color/app_bar_text" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/pedidos"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/bottom_btn3" />

                <TextView
                    android:id="@+id/textoPedidos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pedidos"
                    android:textAlignment="center"
                    android:textColor="@color/app_bar_text" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/ajustes"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/bottom_btn4" />

                <TextView
                    android:id="@+id/textoAjustes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ajustes"
                    android:textAlignment="center"
                    android:textColor="@color/app_bar_text" />
            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.bottomappbar.BottomAppBar>


</androidx.constraintlayout.widget.ConstraintLayout>