<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeUserActivity">

    <ImageView
        android:id="@+id/imgViewBackgroundColorMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background_intro" />

    <TextView
        android:id="@+id/txtViewTitleMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:gravity="center|center_vertical"
        android:text="@string/app_name"
        android:textColor="#3d33a8"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgViewLogoMain"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="104dp"
        android:foregroundGravity="center_vertical|center|center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imgViewBackgroundColorMain"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.969"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/btnGoRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:text="@string/btnGoToRegistro"
        android:backgroundTint="#3d33a8"
        app:layout_constraintBottom_toTopOf="@+id/btnGoLogin"
        app:layout_constraintEnd_toEndOf="@+id/btnGoLogin"
        app:layout_constraintTop_toBottomOf="@+id/txtViewTitleMain" />

    <Button
        android:id="@+id/btnGoLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnGoToLogin"
        android:backgroundTint="#3d33a8"
        app:layout_constraintBottom_toTopOf="@+id/imgViewLogoMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewTitleMain" />

</androidx.constraintlayout.widget.ConstraintLayout>